<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true">
    <TextView
        android:text="@string/OTP"
        android:textColor="@color/colorSkyblue"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:fontFamily="casual" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_OTP"
        android:gravity="center"
        android:inputType="numberPassword"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:id="@+id/editText2"
        android:fontFamily="casual" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="80dp"
            android:text="@string/OK"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:id="@+id/btOK"
            android:fontFamily="casual" />
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Cancle"
            android:id="@+id/btCancle"
            android:fontFamily="casual" />


    </LinearLayout>

</LinearLayout>

</RelativeLayout>
