<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.loginsignpage.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Name"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EmailAddress"
            android:layout_marginTop="10dp"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter EmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:layout_marginTop="10dp"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Enter Password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Confirm_Password"
            android:layout_marginTop="10dp"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Enter Confirm Password"/>
        <Button
            android:id="@+id/btRegister"
            android:text="@string/Button"
            android:textColor="@color/colorSkyblue"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Already_Register"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorSkyblue"
            android:id="@+id/alreadyRegister"/>
        <TextView
            android:id="@+id/txtResend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resend" />

    </LinearLayout>


</ScrollView>
