<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">
    <TextView
        android:textStyle="italic"
        android:textColor="@color/colorSkyblue"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:fontFamily="casual" />

    <EditText
        android:hint="@string/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
       android:layout_marginTop="10dp"
        android:ems="10"
        android:id="@+id/etemail"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:fontFamily="casual" />

    <EditText
        android:hint="@string/Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:id="@+id/etpass"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:fontFamily="casual" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="80dp"
            android:text="@string/Sign_IN"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:id="@+id/btSignIn"
            android:fontFamily="casual" />
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Cancle"
            android:id="@+id/btCancle"
            android:fontFamily="casual" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Not_Register"
        android:id="@+id/notRegister"
        android:textColor="@color/colorSkyblue"
        android:gravity="center" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot password?"
        android:textColor="@color/colorAccent" />

</LinearLayout>


</RelativeLayout>
